placeholder for text questions

--- a/app/views/admin/survey_questions/_text_fields.haml
+++ b/app/views/admin/survey_questions/_text_fields.haml
@@ -1,1 +1,2 @@
+= form.input :placeholder_text, as: :string
 = form.input :use_response_as_name, label: 'Use the response to this question as the gift recipient\'s name'
