--- a/app/views/survey_question_responses/_text_fields.haml
+++ b/app/views/survey_question_responses/_text_fields.haml
@@ -1,1 +1,1 @@
-= form.input :text_response, as: :string, label: label
+= form.input :text_response, as: :string, label: label, placeholder: @question_response.survey_question.placeholder_text
