--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -6,13 +6,14 @@
 .navbar-static-top {
   border-width: 0;
 }
-.navbar-brand a {
-  background: image-url('icons/logo.svg') no-repeat;
-  display: block;
+.navbar-brand span {
+  display: inline-block;
   text-indent: -9999px;
-  width: 82px;
-  height: 37px;
-  background-size: 82px 37px;
+}
+.navbar-brand a:hover,
+.navbar-brand a:active {
+  text-decoration: none;
+  background-color: transparent;
 }
 .nav li {
   margin-bottom: 0;
