--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -3,31 +3,34 @@
     .col-xs-12
       %nav.navbar.navbar-default.navbar-static-top
         .navbar-header
-          .navbar-brand.wrapt-logo{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt", root_path
+          .navbar-brand{class: ("active" if active_top_nav_section == 'home_pages')}
+            = link_to root_path do
+              %span Wrapt
+              =embedded_svg('wrapt-logo', class: "navbar-brand__icon-wrapt-logo")
         
         %ul.nav.navbar-nav.navbar-right
           - if current_user && current_user.active?
             - if current_user&.admin?
               %li
                 = link_to admin_root_path do
-                  =embedded_svg('icon-circle', class: "icon navbar-static-top--icon-circle")
+                  =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                   Admin
             %li
               = link_to my_account_path do
-                =embedded_svg('icon-circle', class: "icon navbar-static-top--icon-circle")
+                =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                 My Account
           %li
             = link_to '#' do
-              =embedded_svg('icon-circle', class: "icon navbar-static-top--icon-circle")
+              =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
               Science of Gifting
           - if current_user
             %li
               = link_to user_session_path, method: :delete do
-                =embedded_svg('icon-circle', class: "icon navbar-static-top--icon-circle")
+                =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                 Sign Out
           - else
             %li
               = link_to new_user_session_path, data: {loads_in_pjax_modal: true} do
-                =embedded_svg('icon-circle', class: "icon navbar-static-top--icon-circle")
+                =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                 Sign In
             
