--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -16,6 +16,9 @@ label {
   margin-top: 4px;
   padding: 14px 12px;
 }
+.form-control:focus {
+  box-shadow: none;
+}
 .error label,
 .error .form-control,
 .help-block--error {
@@ -29,7 +32,7 @@ label {
   display: block;
   @include vertical-align(absolute);
   right: 10px;
-  color: $gray-003;
+  color: $gray-005;
   text-transform: uppercase;
   font-size: rem(14);
   line-height: 1;
@@ -77,7 +80,7 @@ label {
   
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    margin-top: -13.5px; 
+    margin-top: -18.5px; 
     // You need to specify a margin in Chrome, but in Firefox and IE it is automatic
   }
 
@@ -85,22 +88,22 @@ label {
   // Firefox
   // IE
   input[type=range]::-webkit-slider-thumb {
-    height: 35px;
-    width: 35px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background: $blue-001;
     cursor: pointer;
   } 
   input[type=range]::-moz-range-thumb {
-    height: 35px;
-    width: 35px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background: $blue-001;
     cursor: pointer;
   } 
   input[type=range]::-ms-thumb {
-    height: 35px;
-    width: 35px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background: $blue-001;
     cursor: pointer;
