--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -37,3 +37,10 @@ a:active .navbar-static-top__icon-circle {
 .navbar-brand__icon-wrapt-logo {
   height: 40px;
 }
+.btn__icon-caret-right {
+  width: 14px;
+  height: 14px;
+  vertical-align: middle;
+  margin-left: 28px;
+  margin-top: -2px;
+}
