--- a/app/assets/stylesheets/modules/admin/_icons.scss
+++ b/app/assets/stylesheets/modules/admin/_icons.scss
@@ -9,3 +9,10 @@ i.range {
 i.text {
   background-image: image-url('icons/text-input.svg');
 }
+#wrapt-logo .cls-1 {
+  fill: $blue-001;
+}
+.footer__icon-wrapt-logo {
+  height: 40px;
+  margin-top: 60px;
+}
