--- a/app/views/admin/home/show.html.haml
+++ b/app/views/admin/home/show.html.haml
@@ -4,7 +4,7 @@
 
     %p Welcome!
 
-    %p This preliminary tool allows site administrators to:
+    %p Site administrators can use these pages to:
     %ul
       %li Manage a catalog of Products
       %li Design Quizzes for creating a gift recipient portrait
