--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -10,12 +10,12 @@
     .col-xs-8.col-xs-offset-2
       .landing-question
         = simple_form_for @profile do |form|
-          = form.submit 'Wife', class: 'btn btn-default'
-          = form.submit 'Girlfriend', class: 'btn btn-default'
-          = form.submit 'Mother', class: 'btn btn-default'
-          = form.submit 'Daughter', class: 'btn btn-default'
-          = form.submit 'Friend', class: 'btn btn-default'
-          = form.submit 'Sister', class: 'btn btn-default'
-          = form.submit 'Colleague', class: 'btn btn-default'
-          = form.submit 'Partner', class: 'btn btn-default'
-          = form.submit 'Other', class: 'btn btn-default'
+          = form.submit 'Wife', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Girlfriend', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Mother', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Daughter', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Friend', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Sister', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Colleague', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Partner', class: 'btn btn-multiple-choice-option'
+          = form.submit 'Other', class: 'btn btn-multiple-choice-option'
