--- a/app/assets/stylesheets/modules/_modules.scss
+++ b/app/assets/stylesheets/modules/_modules.scss
@@ -1,5 +1,6 @@
 // fonts gets included in app.scss so it's available for variables/mixins
 @import "grid";
+@import "transitions_animations";
 @import "typography"; 
 @import "buttons";
 @import "nav";
