--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -12,14 +12,9 @@ h1 {
   letter-spacing: 1px;
   line-height: 1.227272727;
 }
-h1.page-title {
-  font-size: rem(36);
-  line-height: 1.294444444;
-  margin-bottom: 52px;
-}
 h2 {
   font-size: rem(32);
-  line-height: 1.333333333;
+  line-height: 1.23;
   margin-bottom: 24px;
   letter-spacing: 1px;
 }
@@ -37,15 +32,12 @@ h3 {
 h4 {
   font-size: 24px;
   letter-spacing: 0;
-  margin-bottom: 34px;
-}
-h4.mono {
-  @include akkurat-mono;
-  font-weight: normal;
+  margin-bottom: 16px;
 }
 h5 {
   text-transform: uppercase;
   font-size: rem(18);
+  line-height: 1.1;
   margin-bottom: 32px;
   letter-spacing: 2px;
   @include akkurat-regular;
@@ -95,10 +87,15 @@ a:active {
   letter-spacing: 1.07px;
 }
 .sqr-section__label .small,
-.small.wrapt-range__label {
+.small.wrapt-range__label,
+.sqr-submit__keyboard-hint {
   font-size: rem(12);
   line-height: 1;
   letter-spacing: 1.07px;
   color: $gray-010;
   margin-bottom: 0;
+}
+.sqr-submit__keyboard-hint {
+  color: $gray-006;
+  margin-top: 6px;
 }
