--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -12,10 +12,10 @@
 }
 
 .floating-container {
-  background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+  background-color: #FFF;
+  -webkit-box-shadow: 0 6px 16px 0 rgba(0,0,0,0.05);
+  -moz-box-shadow: 0 6px 16px 0 rgba(0,0,0,0.05);
+  box-shadow: 0 6px 16px 0 rgba(0,0,0,0.05);
 }
 
 // When it's time to make the site responsive:
