--- a/app/views/survey_question_responses/_multiple_choice_choose_many_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_choose_many_fields.haml
@@ -7,8 +7,9 @@
 .hint Select All That Apply
 - @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
   .row.option-row
-    - option_row.each do |option|
-      = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
+    .col-xs-12
+      - option_row.each do |option|
+        = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
 
 = form.input :other_option_text, as: :string, label: false, wrapper_html: { data: {behavior: 'other-text-input-wrapper'} }, input_html: {data: {behavior: 'other-text-input'}}
 
