--- a/app/views/survey_question_responses/_multiple_choice_choose_one_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_choose_one_fields.haml
@@ -3,8 +3,9 @@
 %label= label
 - @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
   .row.option-row
-    - option_row.each do |option|
-      = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
+    .col-xs-12
+      - option_row.each do |option|
+        = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
 
 - content_for :page_js do
   :javascript
