--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -70,6 +70,7 @@
   right: 0px;
   bottom: 0px;
   margin-bottom: -50px;
+  padding-right: 40px;
 }
 
 .sqr-section-progress-bar {
@@ -139,6 +140,5 @@
   height: 100%;
   background-color: $tan-002;
 }
-
 
 
