--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -101,14 +101,20 @@
 }
 .btn.btn-yes-no {
   width: 90px;
+  min-width: initial;
   padding-left: 0;
   padding-right: 0;
+  display: block;
+  float: left;
+}
+.btn.btn-yes-no:last-child {
+  border-left: none;
 }
 .btn.btn-multiple-choice-option {
   min-width: 158px;
   padding-left: 10px;
   padding-right: 10px;
-  margin-right: 5px;
+  margin-right: 15px;
   margin-bottom: 16px;
 }
 .btn.btn-multiple-choice-option:last-child {
@@ -120,12 +126,14 @@
   border: 1px solid $gray-005;
 }
 .btn.btn-multiple-choice-option:hover,
-.btn.btn-yes-no:hover {
-  background-color: rgba(242, 226, 170, 60);
+.btn.btn-yes-no:hover,
+.btn.btn-multiple-choice-option.selected:hover, 
+.btn.btn-yes-no.selected:hover {
+  background-color: rgba(242, 226, 170, .60);
 }
 .btn.btn-multiple-choice-option.selected,
 .btn.btn-yes-no.selected {
-  background-color: rgba(242, 226, 170, 70);
+  background-color: rgba(242, 226, 170, .70);
 }
 .sqr-submit__btn {
   width: 162px;
