--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -99,3 +99,8 @@ a:active {
   color: $gray-006;
   margin-top: 6px;
 }
+.sqr-option-explanation {
+  font-size: rem(12);
+  text-align: center;
+  color: $gray-006;
+}
