--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -15,7 +15,7 @@
 
 - @question_response.survey_question.options.each do |option|
   - if option.explanation.present?
-    %p{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
+    %p.sqr-option-explanation{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
 
 - content_for :page_js do
   - if @question_response.survey_question.multiple_option_responses
