sign in modals adjustments [#135783723]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,11 @@
 @import "helpers/margins_padding";
 @import "modules/modules";
 
+.alert {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 
