--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -50,3 +50,10 @@ a:active .navbar-static-top__icon-circle {
   height: 14px;
   fill: $blue-005;
 }
+.modal__icon-close {
+  width: 22px;
+  height: 22px;
+}
+// #icon-close .st0 {
+//   fill: $gray-010;
+// }
