--- a/app/assets/stylesheets/modules/_modules.scss
+++ b/app/assets/stylesheets/modules/_modules.scss
@@ -9,6 +9,7 @@
 @import "lists";
 @import "tables";
 @import "footer";
+@import "modals";
 @import "questions";
 @import "style-guide";
 @import "quiz";
