--- a/app/views/layouts/pjax_modal_content.haml
+++ b/app/views/layouts/pjax_modal_content.haml
@@ -1,9 +1,9 @@
 .modal-header
   %button.close.pull-right(aria-label="Close" pjax-modal-close type="button")
-    %span(aria-hidden="true") x
+    =embedded_svg('icon-close', class: 'modal__icon-close')
   %h4.modal-title(data-pjax-modal-title)
     = yield :modal_title
-.modal-body.clearfix
+.modal-body.clearfix.ph3.pb3
   = render 'layouts/alerts'
   %div(data-pjax-modal-body)
     = yield
