--- a/app/views/password_reset_requests/new.haml
+++ b/app/views/password_reset_requests/new.haml
@@ -1,15 +1,15 @@
-.container
-  .row
-    .col-md-4
-      %h1 Lost Password?
+.row
+  .col-xs-12
+    %h1 Lost Password?
 
-      %p Enter your email address below and we will send you instructions for resetting your password.
+    .center-block.mb4
+      %p.lead Enter your email address below and we will send you instructions for resetting your password.
 
-      = simple_form_for @password_reset_request, html: {data: {submits_to_pjax_modal: true}} do |form|
-        .form-inputs
-          = form.input :email, label: 'Email Address'
+    = simple_form_for @password_reset_request, html: {data: {submits_to_pjax_modal: true}} do |form|
+      .form-inputs
+        = form.input :email, label: 'Email Address'
 
-        .form-actions
-          = form.submit 'Submit', class: 'btn btn-primary'
-        
-        %p= link_to 'Return to Sign in', new_user_session_path
+      .form-actions
+        = form.submit 'Submit', class: 'btn btn-primary btn-full-width'
+      
+      %p.text-center.mt4.help= link_to 'Return to Sign in', new_user_session_path
