--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -17,6 +17,9 @@
   -moz-box-shadow: 0 6px 16px 0 rgba(0,0,0,0.05);
   box-shadow: 0 6px 16px 0 rgba(0,0,0,0.05);
 }
+.floating-container__invite {
+  padding: 64px 98px 24px;
+}
 
 // When it's time to make the site responsive:
 // 1. Remove inclusion of this file in /app/assets/stylesheets/modules/modules
