--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -77,7 +77,15 @@ a:active {
 
 .wrapt-highlight-text {
   background-color: rgba(196, 210, 233, .2);
-  color: $blue-001;
+  color: $blue-002;
+  font-size: rem(12);
+  line-height: 1.5;
+  letter-spacing: .6px;
+  padding-left: 64px;
+  padding-right: 64px;
+  padding-top: 5px;
+  margin-top: 32px;
+  height: 50px;
 }
 .sqr-progress__small {
   font-size: rem(12);
