[#137669603] fix bug for multi select choose one questions

--- a/app/views/survey_question_responses/_multiple_choice_choose_one_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_choose_one_fields.haml
@@ -1,3 +1,4 @@
+-# TODO: Ask @rrosen if this is needed anymore
 = form.input :survey_question_option_id, as: :hidden, input_html: {data: {behavior: 'option-id-input-field'}}
 
 %label= label
