--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -4,7 +4,8 @@
     = form.association :survey_question_options, as: :check_boxes, collection: [@question_response.survey_question.other_option], label_method: :text, input_html: {data: {behavior: 'option-id-input other-option'}}
 
 %label= label
-.hint Select All That Apply
+- if @question_response.survey_question.multiple_option_responses
+  .hint Select All That Apply
 - @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
   .row.option-row
     .col-xs-12
@@ -18,6 +19,12 @@
     %p.sqr-option-explanation{data: {behavior: 'option-explantion', option_id: option.id}}= option.explanation
 
 - content_for :page_js do
+  :javascript
+      new App.MultipleChoiceForm({
+        multipleOptionResponses: #{@question_response.survey_question.use_multiple_response_form?.to_json}
+      })
+-#
+  -# TODO: Talk to @rrosen about this
   - if @question_response.survey_question.multiple_option_responses
     :javascript
       new App.MultipleChoiceForm({
