--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -3,7 +3,7 @@
   min-width: 180px;
 }
 .btn:focus, 
-.btn.focus, 
+.btn.focus,
 .btn:active:focus, 
 .btn:active.focus, 
 .btn.active:focus, 
@@ -20,6 +20,14 @@
   background-color: $gray-011;
   border-color: $blue-006;
 }
+
+// I feel that the following selectors need to be added below
+// waiting for @jstrothman to get approval from MD
+// .btn.btn-multiple-choice-option:active,
+// .btn.btn-yes-no:active,
+// .btn.btn-multiple-choice-option:focus,
+// .btn.btn-yes-no:focus
+
 .btn-default:active,
 .btn-default:active:hover, 
 .btn-default:active:focus, 
@@ -114,7 +122,7 @@
   min-width: 158px;
   padding-left: 10px;
   padding-right: 10px;
-  margin-right: 15px;
+  margin-right: 13px;
   margin-bottom: 16px;
 }
 .btn.btn-multiple-choice-option:last-child {
@@ -144,4 +152,10 @@
   letter-spacing: 2.1px;
   padding-left: initial;
   padding-right: initial;
+}
+
+.sqr-submit__btn:disabled,
+.sqr-submit__btn:disabled:hover {
+  background-color: #E9ECEC;
+  border: none;
 }
