--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -27,6 +27,8 @@
   margin-top: -50px;
   margin-left: -40px;
   display: table;
+  background-color: transparent;
+  border: none;
   // has transition in transitions_animations
 }
 
@@ -65,12 +67,21 @@
   color: $gray-010;
 }
 
+.sqr-option-explanations {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: 20px;
+  height: 37px;
+}
+
 .sqr-submit__container {
   position: absolute;
   right: 0px;
   bottom: 0px;
   margin-bottom: -50px;
   padding-right: 40px;
+  height: 75px;
 }
 
 .sqr-section-progress-bar {
