--- a/app/views/survey_question_responses/_range_fields.haml
+++ b/app/views/survey_question_responses/_range_fields.haml
@@ -2,4 +2,4 @@
 - min_label = question.min_label
 - max_label = question.max_label
 
-= form.input :range_response, as: :wrapt_range, label: label, input_html: {min: '-1', max: '1', step: '0.01'}, labels: {min_label: min_label, max_label: max_label}
+= form.input :range_response, as: :wrapt_range, label: label, input_html: {min: '-1', max: '1', step: '0.01', data: {behavior: 'range-response'}}, labels: {min_label: min_label, max_label: max_label}
