--- a/app/views/survey_question_responses/show.html.haml
+++ b/app/views/survey_question_responses/show.html.haml
@@ -13,24 +13,32 @@
               = question_number_of_total(@question_response, @survey_response)
 
           - if @question_response.previous_response
-            = link_to profile_survey_question_path(@profile, @survey_response, @question_response.previous_response), class: 'sqr-previous__link' do
+            = link_to profile_survey_question_path(@profile, @survey_response, @question_response.previous_response), class: 'sqr-previous__link', data: {behavior: 'prev-question-button'} do
               .sqr-previous__icon
                 =embedded_svg('icon-caret-left', class: "sqr-previous__icon--caret-left")
               .sqr-previous__sudo-link
 
           = simple_form_for @question_response, url: profile_survey_question_path(@profile, @survey_response, @question_response), html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
-
+            -# if @question_response.previous_response
+              %button.sqr-previous__link{type: 'submit'}
+                .sqr-previous__icon
+                  =embedded_svg('icon-caret-left', class: "sqr-previous__icon--caret-left")
+                .sqr-previous__sudo-link
             = render response_fields_partial, form: form, label: @question_response.survey_question.prompt_with_name(@survey_response)
             .sqr-submit__container.text-right#js-sqr-submit__container
               %button{type: "submit", class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}}
                 = question_response_next_button_text.html_safe
+            -#
+              -# multi select questions hitting enter doesn't work
+              -# removing per @jstrothman
               .sqr-submit__keyboard-hint#js-next-question-hint-text
                 Or Hit Enter to Continue
 
         = survey_sections_progress_bar(@survey_response)
         
-
-
+- content_for :page_js do
+  :javascript
+    new App.PrevButtonBehavior()
 
 
 
