--- a/app/assets/stylesheets/modules/_transitions_animations.scss
+++ b/app/assets/stylesheets/modules/_transitions_animations.scss
@@ -1,6 +1,7 @@
 .btn,
 .sqr-previous__link,
-.sqr-option-explanation {
+.sqr-option-explanation,
+.gr-carousel__nav {
   transition: all 0.3s ease 0s;
 }
 
