--- a/app/views/gift_recommendations/_gift_image.haml
+++ b/app/views/gift_recommendations/_gift_image.haml
@@ -1,4 +1,4 @@
 - image_url = locals[:image_url]
-.gr-image-carousel__image{style: "background-image: url(#{image_url})"}
-  .gr-image-carousel__image-text.pa1
-    Image Title
+.gr-image-carousel__image{style: "background-image: url(#{image_url})", data: {image_title: locals[:image_text]}}
+
+    
