--- a/app/views/admin/survey_questions/edit_multiple_choice.haml
+++ b/app/views/admin/survey_questions/edit_multiple_choice.haml
@@ -31,6 +31,7 @@
         = form.input :include_other_option, as: :boolean, label: "Offer option 'Other' with text box"
         = form.input :multiple_option_responses, as: :boolean, label: 'Allow multiple selections'
         = form.input :yes_no_display, as: :boolean, label: 'Display as a Yes/No Question'
+        = form.input :use_response_as_relationship, as: :boolean, label: 'The response to this question indicates the gift recipient\'s  relationship to the gift giver'
         = render 'conditional_display_fields', form: form
 
       .form-actions
