--- a/app/views/admin/profile_set_survey_responses/_form.html.haml
+++ b/app/views/admin/profile_set_survey_responses/_form.html.haml
@@ -16,7 +16,7 @@
       - section_was = section
 
       .admin-quiz-question.mb5{data: {behavior: 'survey_question', question_id: question.id, conditional_display: ('true' if question.conditional_display), conditional_question_id: question.conditional_question_id, conditional_question_option_ids: question.conditional_question_options.map(&:survey_question_option_id).to_json}}
-        %h4.admin-quiz-question__label #{question_response_fields.index + 1}. #{question_response_fields.object.survey_question.prompt_with_name(@profile_set_survey_response)}
+        %h4.admin-quiz-question__label #{question_response_fields.index + 1}. #{question_response_fields.object.survey_question.prompt_with_substitutions(@profile_set_survey_response)}
         = question_response_fields.input :survey_question_id, as: :hidden
         = render question_response_fields_partial(question_response_fields.object), question_response_fields: question_response_fields
 
