show intro text on section 1, question 2

--- a/app/views/survey_question_responses/show.html.haml
+++ b/app/views/survey_question_responses/show.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-xs-12
       .sqr-container
-        - if @question_response.survey_question.first_in_section?
+        - if display_section_intro_text?
           .sqr-container__header.pb3
             %h1.text-center= @question_response.survey_question.survey_section.introduction_heading_with_profile_relationship(@profile)
             %p.tan-002= @question_response.survey_question.survey_section.introduction_text_with_profile_relationship(@profile)
