gift basket basic layout

--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -6,6 +6,8 @@
   - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
   = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift')
 
+= render 'gift_basket'
+
 - content_for :page_js do
   = render '/application/carousel_js'
   :javascript
