--- a/app/views/gift_recommendations/_gift.haml
+++ b/app/views/gift_recommendations/_gift.haml
@@ -18,7 +18,9 @@
     .gr-carousel__gift-actions.pa2
       -# PLACEHOLDER
       %div
-        %h3.gr-carousel__price
-          $130.00
-        .gr-carousel__quantity.text-right
-          = link_to 'ADD TO CART', '#', class: 'btn btn-primary'
+        = form_for GiftSelection.new(gift: gift, profile: @profile), url: profile_gift_selections_path(@profile), html: {data: {remote: true}} do |form|
+          = form.hidden_field :gift_id
+          %h3.gr-carousel__price
+            = number_to_currency gift.selling_price
+          .gr-carousel__quantity.text-right
+            = form.submit 'ADD TO BASKET', class: 'btn btn-primary'
