--- a/app/views/gift_recommendations/_gift_basket.haml
+++ b/app/views/gift_recommendations/_gift_basket.haml
@@ -1,12 +1,13 @@
 .gift-basket-overlay{data: {behavior: 'gift-basket-overlay'}}
 
-.gift-basket{data: {behavior: 'gift-basket'}}
+.gift-basket{data: {behavior: 'gift-basket-container', profile_id: @profile.id}}
+  -# .gift-basket--rows
   .gift-basket--header
     = link_to "< Back to Shopping", '#', data: {behavior: 'close-gift-basket'}
   .gift-basket--main
     %div{data: {behavior: 'gift-basket-gifts'}}
-      %h3 Gift Basket
-      SHOW GIFTS HERE!
+      = render 'gift_selections/index', profile: @profile
+
   .gift-basket--footer
     %h4
       Subtotal
@@ -15,4 +16,8 @@
 
     = link_to 'SEND GIFT SELECTION NOTIFICATION', '#', class: 'btn btn-primary btn-sm btn-full-width'
 
-    %p You will be able to preview the email before you send it. 
+    %p You will be able to preview the email before you send it.
+
+- content_for :page_js do
+  :javascript
+    new App.GiftBasket()
