--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -23,6 +23,12 @@
             = link_to '#' do
               =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
               Science of Gifting
+          %li
+            - if show_gift_basket_in_top_nav?
+              = link_to '#', data: {behavior: 'open-gift-basket'} do
+                =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
+                Gift Basket
+                -# TODO add count
           - if current_user
             %li
               = link_to user_session_path, method: :delete do
